@@ -347,7 +347,7 @@ struct ClassTraits<Herwig::EtaPiGammaGammaDecayer>
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "HwSMDecay.so"; }
+  static string library() { return "HwWeakCurrents.so HwSMDecay.so"; }
   
  };
   
