@@ -272,7 +272,7 @@ struct ClassTraits<Herwig::PScalarVectorVectorDecayer>
    * access to this class and every other class it uses
    * (except the base class).
    */
-  static string library() { return "HwSMDecay.so"; }
+  static string library() { return "HwWeakCurrents.so HwSMDecay.so"; }
 
 };
 
