@@ -314,7 +314,7 @@ template <>
   /** Return the name of the shared library be loaded to get
    *  access to the ScalarMesonFactorizedDecayer class and every other class it uses
    *  (except the base class). */
-  static string library() { return "HwSMDecay.so"; }
+  static string library() { return "HwWeakCurrents.so HwSMDecay.so"; }
 };
 
 }
